# postgres

./: AGENTS.md  CLAUDE.md
.github/scripts/: walredo_redo_test.py  walredo_smoke.py
.github/workflows/: pagestore-test.yml  walredo-test.yml
contrib/: Makefile  meson.build
contrib/pagestore/: BRANCH_POSTGRES_MILESTONES.md  DESIGN_NOTES.md  LSM_ARCHITECTURE.md  LSM_OBJECT_STORAGE_PLAN.md  MATERIALIZATION.md  Makefile  PGCONTROL_ON_STORE_DESIGN.md  READ_PATH_PR_STACK_PLAN.md  SHARDING.md  SLRU_ON_STORE_DESIGN.md  SPDK_NOTES.md  WAL_REDO.md  backend_localsvc.c  backend_passthrough.c  compute_on_branch_demo.sh  integration_test.sh  meson.build  pagestore.c  pagestore_backend.h  pagestore_bench.c  pagestore_control_restore.c  pagestore_core.c  pagestore_core.h  pagestore_daemon.c  pagestore_daemon_spdk.c  pagestore_gc_test.c  pagestore_import.c  pagestore_ipc.h  pagestore_layer.c  pagestore_layer.h  pagestore_layer_store.c  pagestore_layer_store.h  pagestore_layer_test.c  pagestore_manifest.c  pagestore_manifest.h  pagestore_manifest_test.c  pagestore_memtable.c  pagestore_memtable.h  pagestore_pgcache.c  pagestore_pgcache.h  (+14 more)
doc/src/sgml/: config.sgml
src/backend/access/heap/: visibilitymap.c
src/backend/access/transam/: clog.c  commit_ts.c  multixact.c  slru.c  xlog.c  xlogutils.c
src/backend/main/: main.c
src/backend/postmaster/: Makefile  meson.build  walredo.c
src/backend/storage/smgr/: smgr.c
src/backend/tcop/: postgres.c
src/include/access/: slru.h  xlog.h
src/include/postmaster/: postmaster.h  walredo.h
src/include/storage/: smgr.h
src/include/tcop/: tcopprot.h
